# TheOS-Reborn

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
Base/: MPyTest.py  test.txt
Base/system/: azerty.conf  keyboard.conf  qwerty.conf
Driverland/: CMakeLists.txt
Driverland/Daemons/: CMakeLists.txt
Driverland/Daemons/TheDHCPd/: CMakeLists.txt  dhcp_proto.h  main.c
Includes/Boot/: EntryConfig.h  Limine.h  LimineHelper.h
Includes/CPU/: ACPI.h  APIC.h  APIC_private.h  FPU.h  GDT.h  IDT.h  IO.h  IRQ.h  ISR.h  MADT.h  MSR.h  NUMA.h  PCI.h  PCI_private.h  SMP.h  SMP_private.h  Syscall.h  Syscall_private.h  TSS.h  UserMode.h  x86.h
Includes/Debug/: Assert.h  KDebug.h  KDebug_private.h  Logger.h  Spinlock.h  logger.h
Includes/Device/: AHCI.h  APIC.h  ATA.h  CMOS.h  COM.h  DRM.h  E1000.h  E1000_private.h  HDA.h  HDA_private.h  HPET.h  Keyboard.h  Keyboard_private.h  Mouse.h  Mouse_private.h  PIC.h  PIT.h  PIT_private.h  RTC.h  TTY.h  TTYFramebuffer.h  TTYVGA.h  VGA.h
Includes/FileSystem/: ext4.h
Includes/LibC/: cpuid.h  limits.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
Includes/Memory/: KMem.h  KMem_private.h  Memory.h  PMM.h  VMM.h  VMMLayout.h  VMM_private.h
Includes/Multiboot2/: multiboot2_info.h
Includes/Network/: ARP.h  ARP_private.h  Socket.h  Socket_private.h  TCP.h  TCP_private.h  Unix.h
Includes/Storage/: AHCI.h  AHCI_private.h  SATA.h  VFS.h
Includes/Task/: Process.h  RCU.h  Task.h  Task_private.h
Includes/UAPI/: DRM.h  Net.h  Sound.h  Syscall.h
Includes/Util/: Buffer.h
Kernel/: CMakeLists.txt  Entry.c  entry.c  kernel.ld
Kernel/Boot/: Bootloader.S  LimineEntry.S  LimineEntry.c.S  LimineHelper.c  boot.S  grub.cfg  limine.conf
Kernel/CPU/: ACPI.c  APEntry.c  APIC.c  APLoader.S  FPU.c  GDT.S  GDT.c  IDT.c  IO.c  IRQ.c  ISR.S  ISR.c  Interrupts.S  MADT.c  MSR.c  NUMA.c  PCI.c  SMP.c  Syscall.S  Syscall.c  TSS.S  UserMode.S  UserMode.c  interrupts.S
Kernel/Debug/: KDebug.c  Logger.c  Spinlock.c  logger.c
Kernel/Device/: AHCI.c  APIC.c  ATA.S  ATA.c  CMOS.c  COM.c  DRM.c  E1000.c  HDA.c  HPET.c  Keyboard.c  Mouse.c  PIC.c  PIT.c  RTC.c  TTY.c  TTYBackend.h  TTYFramebuffer.c  TTYVGA.c
Kernel/FileSystem/: ext4.c
Kernel/Memory/: KMem.c  Memory.c  PMM.c  VMM.c
Kernel/Multiboot2/: multiboot2_info.c
Kernel/Network/: ARP.c  Socket.c  TCP.c  Unix.c
Kernel/Storage/: AHCI.c  ATA.c  SATA.c  VFS.c
Kernel/Task/: Process.c  RCU.c  Task.S  Task.c
Meta/: analyze_doom_profile.py  apply-embeddeddoom-patches.sh  disk.sh  gen-graphs.sh  iso-limine.sh  iso.sh  net_inject.py  run.sh
Meta/CMake/: utils.cmake
Meta/patches/embeddedDOOM/: 0001-theos-runtime-port.patch
Toolchain/: build.sh
Toolchain/Patches/: binutils.patch  gcc.patch
Userland/: CMakeLists.txt
Userland/Apps/: AppRuntime.cmake  CMakeLists.txt  TheEmbeddedDOOM.cmake  TheMicroPython.cmake
Userland/Apps/TheApp/: CMakeLists.txt  crt0.S  linker.ld  main.c
Userland/Apps/TheEmbeddedDOOM/: CMakeLists.txt  i_video_theos.c
Userland/Apps/TheMicroPython/: CMakeLists.txt
Userland/Apps/TheMicroPython/ports/theos/: Makefile  main.c  modtheos.c  mpconfigport.h  mphalport.h  theos_mphal.c
Userland/Apps/TheMicroPython/scripts/: perfwm.py
Userland/Apps/TheMicroPython/scripts/perfkit/: README.md  app.py
Userland/Apps/TheMicroPython/scripts/perfkit/analysis/: __init__.py  health.py
Userland/Apps/TheMicroPython/scripts/perfkit/collectors/: __init__.py  system.py  theos_adapter.py
Userland/Apps/TheMicroPython/scripts/perfkit/core/: __init__.py  config.py  ringbuffer.py
Userland/Apps/TheMicroPython/scripts/perfkit/ui/: __init__.py  wm_client.py  wm_view.py
Userland/Apps/ThePowerManager/: CMakeLists.txt  crt0.S  main.c
Userland/Apps/TheShell/: CMakeLists.txt  crt0.S  crt0.c.S  linker.ld  main.c  shell_core.c  shell_core.h
Userland/Apps/TheShellGUI/: CMakeLists.txt  main.c
Userland/Apps/TheSystemMonitor/: CMakeLists.txt  linker.ld  main.c
Userland/Apps/TheSystemMonitorGUI/: CMakeLists.txt  main.c
Userland/Apps/TheTest/: CMakeLists.txt  main.c  thetest_args.c  thetest_main.c  thetest_wm.c
Userland/Apps/TheTest/Includes/: thetest_app.h
Userland/Apps/TheWindowServer/: CMakeLists.txt  main.c  ws_compositor.c  ws_desktop_ui.c  ws_focus.c  ws_input.c  ws_ipc_server.c
Userland/Apps/TheWindowServer/Includes/: ws_compositor.h  ws_config.h  ws_desktop_ui.h  ws_focus.h  ws_input.h  ws_ipc_server.h  ws_types.h
Userland/Libraries/: CMakeLists.txt
Userland/Libraries/LibC/: CMakeLists.txt  dirent.c  dlfcn.c  errno.c  malloc.c  pthread.c  signal.c  stdio.c  stdlib.c  stdlib_parse.c  string.c  syscall.c  theapp.c  time.c  tls.c  unistd.c  window.c  window_client.c
Userland/Libraries/LibC/Includes/: alloca.h  assert.h  ctype.h  dirent.h  dlfcn.h  errno.h  fcntl.h  libc_elf.h  libc_fd.h  libc_tls.h  limits.h  math.h  netdb.h  pthread.h  signal.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  strings.h  syscall.h  termios.h  theapp.h  time.h  unistd.h  values.h  window.h
Userland/Libraries/LibC/Includes/UAPI/: DRM.h  Net.h  Sound.h  Syscall.h
Userland/Libraries/LibC/Includes/arpa/: inet.h
Userland/Libraries/LibC/Includes/drm/: drm.h  drm_mode.h
Userland/Libraries/LibC/Includes/linux/: soundcard.h
Userland/Libraries/LibC/Includes/net/: if_arp.h
Userland/Libraries/LibC/Includes/netinet/: in.h
Userland/Libraries/LibC/Includes/sys/: filio.h  futex.h  ioctl.h  ipc.h  mman.h  msg.h  shm.h  socket.h  stat.h  time.h  types.h  un.h  wait.h
Userland/Libraries/LibC/crt/: crt0.c.S  linker.dynamic.ld  linker.static.ld
Userland/Libraries/LibC/sys/: ioctl.c  ipc.c  socket.c  termios.c  time.c
Userland/Libraries/LibTheTestDyn/: CMakeLists.txt  thetestdyn.c
ports/theos/: Makefile  linker.ld  main.c  qstrdefsport.h
src/: d_main.c  g_game.c  i_sound.c  i_system.c  m_swap.c  m_swap.h  p_setup.c  r_data.c  r_data.h  r_things.c  s_sound.c  stubs.h  w_wad.c  z_zone.c
src/support/: shrinkwad.c
