include(${CMAKE_CURRENT_SOURCE_DIR}/AppRuntime.cmake)

add_subdirectory(TheApp)
add_subdirectory(TheShell)
add_subdirectory(TheTest)
add_subdirectory(ThePowerManager)
add_subdirectory(TheSystemMonitor)
add_subdirectory(TheSystemMonitorGUI)
include(${CMAKE_CURRENT_SOURCE_DIR}/TheMicroPython.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/TheEmbeddedDOOM.cmake)
add_subdirectory(TheWindowServer)
add_subdirectory(TheShellGUI)
